--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="stylesheet" type="text/javascript" href="assets/javascript/game.js">
+  <link rel="shortcut icon" type="image/png" href="assets/bannerIcon.png"/>
 </head>
 
 <body>
-  <div class="banner">
-    <h1>New York Times API Activity</h1>
+
+  <div class="container-fluid banner">
+     
+     <h1><img src="assets/bannerIcon.png" alt="" class=bannerIcon> New York Times Search</h1>
   </div>
+
+
+  <form class= "form">
   <div class="searchParameters">
     <form>
       Search Terms:
@@ -44,6 +50,7 @@
   <div class="topArticles">
     <h2>Top Articles</h2>
   </div>
+</form>
 
   <div class="happyThoughts">Made with lots and lots of Love :) </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
